# fast_rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/: basic.rs  todo_api.rs  todo_sql.rs
fastrs-core/: Cargo.toml
fastrs-core/src/: app.rs  error.rs  extractors.rs  lib.rs  openapi.rs  responses.rs
fastrs-macros/: Cargo.toml
fastrs-macros/src/: lib.rs
src/: lib.rs
tests/: integration.rs
