[workspace]
members = [
    "fastrs-macros",
    "fastrs-core"
]
resolver = "2"

[package]
name = "fastrs"
version = "0.1.0"
edition = "2024"

[dependencies]
fastrs-core = { path = "fastrs-core" }
fastrs-macros = { path = "fastrs-macros" }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
