[package]
name = "fastrs-core"
version = "0.1.0"
edition = "2024"
description = "A FastAPI-equivalent for Rust: automatic request validation, compile-time OpenAPI docs, and minimal boilerplate on top of Axum, with zero runtime overhead."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahmudsudo/fast_rs"
readme = "../README.md"
keywords = ["web", "axum", "openapi", "validation", "api"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
