[package]
name = "fastrs-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros powering fastrs: route attribute macros and compile-time OpenAPI schema derivation for Axum."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahmudsudo/fast_rs"
readme = "../README.md"
keywords = ["web", "axum", "macros", "openapi", "proc-macro"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
